--- a/public/package.json
+++ b/public/package.json
@@ -13,6 +13,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "npm": "^6.1.0",
-    "owl.carousel": "^2.3.4"
+    "owl.carousel": "^2.3.4",
+    "tableexport.jquery.plugin": "^1.9.11"
   }
 }
